--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@trentm/play-slack-app",
   "version": "1.0.0",
   "private": true,
+  "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --env-file .env app.js"
   },
   "keywords": [
     "slack",
@@ -12,8 +13,13 @@
   ],
   "author": "Trent Mick <trent.mick@elastic.co>",
   "license": "Apache-2.0",
-  "description": "",
+  "engines": {
+    "node": ">=20"
+  },
   "files": [
     "lib"
-  ]
+  ],
+  "dependencies": {
+    "@slack/bolt": "^4.1.1"
+  }
 }
