--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,3 @@
 export SLACK_SIGNING_SECRET=<your-signing-secret>
 export SLACK_BOT_TOKEN=xoxb-<your-bot-token>
+export SLACK_APP_TOKEN=xapp-<your-app-token>
